修正负体部枚举的错误